--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,9 @@
-Django==4.2
-gunicorn==20.1.0
-joblib==1.4.2
-nltk==3.8.1
-numpy==1.26.4
-psycopg2-binary==2.9.9
-PyMuPDF==1.24.5
-PyMuPDFb==1.24.3
-pytz==2024.1
-regex==2024.5.15
-scikit-learn==1.5.0
-scipy==1.13.1
-setuptools==70.0.0
-sqlparse==0.5.0
-threadpoolctl==3.5.0
-tqdm==4.66.4
-tzdata==2024.1
-whitenoise==5.3.0
-dj-database-url==0.5.0
-psycopg2-binary==2.9.1
-PyMuPDF==1.18.15
-nltk==3.6.2
-scikit-learn==0.24.2
-joblib==1.0.1
+Django
+gunicorn
+whitenoise
+dj-database-url
+psycopg2-binary
+PyMuPDF
+nltk
+scikit-learn
+joblib
